# x-rs

./: .gitignore  .gitmodules  ARCHITECTURE_PLAN.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Justfile  PROGRESS_NOTES.md  README.md
crates/xee-adapter/: Cargo.toml
crates/xee-adapter/src/: lib.rs  tree.rs  xpath.rs
crates/xee-adapter/tests/: basic_tests.rs
crates/xml-compliance-matrix/: Cargo.toml
crates/xml-compliance-matrix/src/: lib.rs
crates/xml-engine-traits/: Cargo.toml
crates/xml-engine-traits/src/: error.rs  lib.rs  tree.rs  xpath.rs  xquery.rs  xslt.rs
crates/xml-test-cli/: Cargo.toml
crates/xml-test-cli/src/: main.rs
crates/xml-test-harness/: Cargo.toml
crates/xml-test-harness/src/: lib.rs
crates/xrust-adapter/: Cargo.toml
crates/xrust-adapter/src/: lib.rs
crates/xust-adapter/: Cargo.toml
crates/xust-adapter/src/: lib.rs
results/: CONFORMANCE_REPORT.md  xee_results.txt  xust_results.txt
x-engine/: Cargo.toml
x-engine/src/: engine_xee.rs  engine_xrust.rs  engine_xust.rs  error.rs  lib.rs  reporter.rs  result.rs  traits.rs  unified.rs
x-engine/src/testdriver/: mod.rs  qt3.rs  xsd.rs  xslt30.rs
x-engine/tests/: integration.rs
