[workspace]
members = [
    "crates/xml-engine-traits",
    "crates/xee-adapter",
    "crates/xrust-adapter",
    "crates/xust-adapter",
    "crates/xml-test-harness",
    "crates/xml-compliance-matrix",
    "crates/xml-test-cli",
]
resolver = "2"

[workspace.dependencies]
# Our dependencies
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

# xee workspace dependencies (needed for xee-adapter)
ahash = "0.8.11"
strum = { version = "0.27", features = ["derive"] }
ibig = "0.3.6"
ordered-float = "5.0.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
chumsky = "=1.0.0-alpha.8"
icu = "1.5.0"
icu_provider_adapters = "1.5.0"
chrono = "0.4.40"
blanket = "0.4.0"
regexml = "0.2.1"
regex = "1.11.1"
iri-string = "0.7.7"
json = "0.12.4"
insta = "1.42.2"
ron = "0.8.1"

# XML libraries - use path for local development
xot = { path = "xot" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
