[package]
name = "xml-test-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xml-test-cli"
path = "src/main.rs"

[dependencies]
xml-engine-traits = { path = "../xml-engine-traits" }
xml-test-harness = { path = "../xml-test-harness" }
xml-compliance-matrix = { path = "../xml-compliance-matrix" }
xee-adapter = { path = "../xee-adapter" }
xrust-adapter = { path = "../xrust-adapter" }
xust-adapter = { path = "../xust-adapter" }
clap = { workspace = true }
anyhow = { workspace = true }
